--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+<div class="container">
+  <div class="main">
  <h1>WELCOME TO MY PLAYLIST</h1>  
  <p> ここでは私の好きな音楽を紹介していきます:)</p>
 <h2>IMJMWDP</h2>
@@ -70,6 +72,9 @@ K-R&B界のQUEEN♡
 去年発表されたシングル
 新しい事務所でのデビューをアポロ11号の出発に例えた曲です
 曲も声もFeatも全部”エモ”でおしゃれな雰囲気
+
+</div>
+</div>
 </body>
 
 </html>    
