--- a/index.html
+++ b/index.html
@@ -13,66 +13,78 @@
   <div class="main">
  <h1>WELCOME TO MY PLAYLIST</h1>  
  <p> ここでは私の好きな音楽を紹介していきます:)</p>
+ <ul>
+  <li>JUSTHIS</li>
+  <li>Kid Milli</li> 
+  <li>YUNHWAY</li>
+  <li>H1GHR MUSIC RECORDS</li>
+  <li>JAMIE</li>
+ </ul>
 <h2>IMJMWDP</h2>
 <img src="https://i.ibb.co/74DhqZC/imjm.jpg" alt="imjm" border="0">
 <p>Swingsが創設したレーベルであるJust Music,Indigo Music,WEDAPLUGG RECORDSの総称</p>
-  <ul>
-   <li>JUSTHIS</li>
-   <li>Kid Milli</li> 
-   <li>YUNHWAY</li>
-  </ul>
-
-
+ 
 <h2>JUSTHUS</h2>
-Indigo Music所属
+<img src="https://i.ibb.co/Npx79G0/Justhis.png" alt="Justhis" border="0">
+<p>Indigo Music所属
 私のFAVORITE ARTISTです&#60;3
-
 K-HHの頂点といっても過言ではないと個人的に思います
 “天才”です
+</p>
 
 <h2>4 the Youth</h2>
- 2018年3月7日に発売された、JUSTHISとPaloaltoのコラボアルバム。
+<img src="https://i.ibb.co/RbLBDmZ/4-the-youth.jpg" alt="4-the-youth" border="0">
+ <p>2018年3月7日に発売された、JUSTHISとPaloaltoのコラボアルバム。
 “私たちの青春、そしてこの世界を共に生きていく若者たちのためのアルバム”
 いつ聞いても名曲中の名曲しかありません。大好きなアルバムの一つです!
-今年発売三周年を記念してRemixも発表されました。そちらもぜひ
+今年発売三周年を記念してRemixも発表されました。そちらもぜひ</p>
 <h2>Kid Milli</h2>
-Indigo Music所属
+<img src="https://i.ibb.co/sV148qG/180593910-468550201065439-8135146848948048999-n-1.jpg" alt="180593910-468550201065439-8135146848948048999-n-1" border="0">
+<p>Indigo Music所属
 日本が好きで昔のアルバムの歌詞には”アキバ”という単語が頻出。
-ハイセンスなファッションもPOINT❣
+ハイセンスなファッションもPOINT❣</p>
 <h2>Cliché</h2>
-今年の４月に発表された最新アルバムです
+<img src="https://i.ibb.co/ZGvf9q7/cliche.jpg" alt="cliche" border="0">
+<p>今年の４月に発表された最新アルバムです
 プロデューサーのdressとのコラボアルバムで、
 新鮮な音楽が満載でいつ聞いて新しい感覚を感じさせてくれます♡
-なんといっても上手い！
+なんといっても上手い！</p>
 <h2>YUNHWAY</h2>
-WEDAPLUGG RECORDS所属。
+<img src="https://i.ibb.co/Y2DY8ym/yunhway.png" alt="yunhway" border="0">
+<p>WEDAPLUGG RECORDS所属。
 女性ラッパーで一番好きなラッパーです♡
 声がとにかく魅力的。
 a.k.a: terriyaki queen♡
-外国にいた経験があり、英語ペラペラです
+外国にいた経験があり、英語ペラペラです</p>
 <h2>Mango</h2>
-最近リリースされたEPのMango🥭
+<img src="https://i.ibb.co/9yJtD30/mango.jpg" alt="mango" border="0">
+<p>最近リリースされたEPのMango🥭
 この夏にぴったりのバイブを感じられます
 歌がメインのEPですがなんといっても声がいい！
-
+</p>
 <h2>H1GHR MUSIC RECORDS</h2>
-Jay Parkが創設したレーベル
+<img src="https://i.ibb.co/D1dkvxf/h1gher.png" alt="h1gher" border="0">
+<p>Jay Parkが創設したレーベル
 2021年の韓国ヒップホップアワードのLable of the Yearを受賞
-最年少メンバーはなんと16才!?
+最年少メンバーはなんと16才!?</p>
  <h2>RED TAPE　 BLUE TAPE</h2>
-去年発売されたレーベルのコンピレーションアルバム
+<img src="https://i.ibb.co/YWQDbFk/red-tape.jpg" alt="red-tape" border="0">
+<img src="https://i.ibb.co/WtHkbHq/blue-tape.jpg" alt="blue-tape" border="0">
+<P>去年発売されたレーベルのコンピレーションアルバム
 全曲タイトル曲なアルバムです。REDは強い感じでBLUEは爽やかな感じのアルバムとなっています。
-どっちも鬼リピしましたね、、、いい音楽が詰まっていて感動感動
+どっちも鬼リピしましたね、、、いい音楽が詰まっていて感動感動</P>
 <h2>JAMIE</h2>
-ワーナーミュージック所属
+<img src="https://i.ibb.co/PDgs19T/jamie.jpg" alt="jamie" border="0">
+<p>ワーナーミュージック所属
 K-R&B界のQUEEN♡
 オーディション番組出身で、元JYP所属。
-天才的な歌唱力とSWEGが溢れる性格で魅力満載
+天才的な歌唱力とSWEGが溢れる性格で魅力満載</p>
 <h2>APOLLO 11</h2>
-去年発表されたシングル
+  <img src="https://i.ibb.co/wL19kTN/11.jpg" alt="11" border="0">
+<p>去年発表されたシングル
 新しい事務所でのデビューをアポロ11号の出発に例えた曲です
 曲も声もFeatも全部”エモ”でおしゃれな雰囲気
-
+</p>
 </div>
 </div>
 </body>
