--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 <p>Swingsが創設したレーベルであるJust Music,Indigo Music,WEDAPLUGG RECORDSの総称</p>
  
 <h2 id="jt">JUSTHUS</h2>
-<div class=img><img src="https://i.ibb.co/Npx79G0/Justhis.png" alt="Justhis" border="0"></div>
 <p>Indigo Music所属
 私のFAVORITE ARTISTです&#60;3
 K-HHの頂点といっても過言ではないと個人的に思います
@@ -87,6 +86,8 @@ K-R&B界のQUEEN♡
 新しい事務所でのデビューをアポロ11号の出発に例えた曲です
 曲も声もFeatも全部”エモ”でおしゃれな雰囲気
 </p>
+<p class="credit">Thanks to <a href="https://waffle-waffle.org/" target="_blank">Waffle Camp</a></p>
+<p class="end">created by Towa</p>
 </div>
 </div>
 </body>
