--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <p>Swingsが創設したレーベルであるJust Music,Indigo Music,WEDAPLUGG RECORDSの総称</p>
  
 <h2 id="jt">JUSTHUS</h2>
+<div class=img><img src="https://i.ibb.co/SxwdNG5/Justhis.png" alt="Justhis" border="0"></div>
 <p>Indigo Music所属
 私のFAVORITE ARTISTです&#60;3
 K-HHの頂点といっても過言ではないと個人的に思います
